--- a/godtools/Views/GTHomeView.xib
+++ b/godtools/Views/GTHomeView.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -33,31 +34,6 @@
                         <action selector="addDraftButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="9ks-qd-yAH"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="K6k-oN-bLy">
-                    <rect key="frame" x="28" y="156" width="545" height="324"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                </tableView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMI-zH-hMh">
-                    <rect key="frame" x="473" y="488" width="100" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="50" id="DhV-E9-YLw"/>
-                        <constraint firstAttribute="width" constant="80" id="HNg-d8-Etx"/>
-                        <constraint firstAttribute="width" constant="100" id="rZD-Ps-S7Q"/>
-                    </constraints>
-                    <state key="normal" image="settings_button">
-                        <color key="titleColor" red="0.99933016975532596" green="1" blue="0.99359994484633574" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="HNg-d8-Etx"/>
-                        </mask>
-                    </variation>
-                    <connections>
-                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="XcJ-vI-5cw"/>
-                    </connections>
-                </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUk-VE-nXf">
                     <rect key="frame" x="28" y="498" width="53" height="30"/>
                     <state key="normal" title="Refresh">
@@ -68,24 +44,55 @@
                         <action selector="refreshButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="Qkh-CJ-DWI"/>
                     </connections>
                 </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="K6k-oN-bLy">
+                    <rect key="frame" x="15" y="156" width="570" height="324"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="324" id="ttB-K3-iPu"/>
+                    </constraints>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </tableView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMI-zH-hMh">
+                    <rect key="frame" x="498" y="493" width="75" height="45"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="eMI-zH-hMh" secondAttribute="height" multiplier="2:1" id="9e7-PY-FWw"/>
+                        <constraint firstAttribute="height" constant="45" id="DhV-E9-YLw"/>
+                        <constraint firstAttribute="width" constant="80" id="HNg-d8-Etx"/>
+                        <constraint firstAttribute="width" secondItem="eMI-zH-hMh" secondAttribute="height" multiplier="5:3" id="YSo-I1-gzN"/>
+                        <constraint firstAttribute="width" constant="75" id="rZD-Ps-S7Q"/>
+                    </constraints>
+                    <state key="normal" image="settings_button">
+                        <color key="titleColor" red="0.99933016975532596" green="1" blue="0.99359994484633574" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="9e7-PY-FWw"/>
+                            <exclude reference="HNg-d8-Etx"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="settingsButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="XcJ-vI-5cw"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="eMI-zH-hMh" secondAttribute="bottom" constant="62" id="1op-Iy-y6H"/>
                 <constraint firstItem="K6k-oN-bLy" firstAttribute="centerX" secondItem="zQA-Ub-gch" secondAttribute="centerX" id="64f-2T-pGe"/>
-                <constraint firstItem="K6k-oN-bLy" firstAttribute="trailing" secondItem="eMI-zH-hMh" secondAttribute="trailing" id="7Nw-1d-44f"/>
+                <constraint firstItem="K6k-oN-bLy" firstAttribute="trailing" secondItem="eMI-zH-hMh" secondAttribute="trailing" priority="750" constant="12" id="7Nw-1d-44f"/>
                 <constraint firstItem="zQA-Ub-gch" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Dex-Ix-kGF"/>
                 <constraint firstItem="ICs-RI-grR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="IYC-SS-kNx"/>
-                <constraint firstItem="eMI-zH-hMh" firstAttribute="centerY" secondItem="rI0-rz-YTH" secondAttribute="centerY" id="Kd1-6G-CO8"/>
+                <constraint firstItem="eMI-zH-hMh" firstAttribute="centerY" secondItem="rI0-rz-YTH" secondAttribute="centerY" constant="2.5" id="Kd1-6G-CO8"/>
                 <constraint firstItem="K6k-oN-bLy" firstAttribute="top" secondItem="ICs-RI-grR" secondAttribute="bottom" constant="43" id="KgW-f9-LAh"/>
                 <constraint firstItem="K6k-oN-bLy" firstAttribute="centerX" secondItem="rI0-rz-YTH" secondAttribute="centerX" id="LC0-Lo-wbB"/>
-                <constraint firstItem="eMI-zH-hMh" firstAttribute="top" secondItem="K6k-oN-bLy" secondAttribute="bottom" constant="8" symbolic="YES" id="Nvq-cB-z2f"/>
+                <constraint firstItem="eMI-zH-hMh" firstAttribute="top" secondItem="K6k-oN-bLy" secondAttribute="bottom" constant="13" id="Nvq-cB-z2f"/>
                 <constraint firstItem="rI0-rz-YTH" firstAttribute="baseline" secondItem="vUk-VE-nXf" secondAttribute="baseline" id="QCD-6j-1OI"/>
                 <constraint firstItem="zQA-Ub-gch" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="VM7-Ag-J4d"/>
                 <constraint firstItem="K6k-oN-bLy" firstAttribute="centerX" secondItem="ICs-RI-grR" secondAttribute="centerX" id="cQP-z2-XLM"/>
                 <constraint firstAttribute="trailing" secondItem="eMI-zH-hMh" secondAttribute="trailing" constant="27" id="o6R-gW-EJp"/>
                 <constraint firstItem="K6k-oN-bLy" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tbb-6g-IFa"/>
                 <constraint firstAttribute="bottom" secondItem="zQA-Ub-gch" secondAttribute="bottom" id="vsZ-lU-4cu"/>
-                <constraint firstItem="K6k-oN-bLy" firstAttribute="leading" secondItem="vUk-VE-nXf" secondAttribute="leading" id="x9b-PT-QyV"/>
+                <constraint firstItem="K6k-oN-bLy" firstAttribute="leading" secondItem="vUk-VE-nXf" secondAttribute="leading" constant="-13" id="x9b-PT-QyV"/>
             </constraints>
             <connections>
                 <outlet property="addDraftButton" destination="rI0-rz-YTH" id="UIj-kD-zvO"/>
@@ -93,7 +100,7 @@
                 <outlet property="settingsButton" destination="eMI-zH-hMh" id="iRJ-1O-gXY"/>
                 <outlet property="tableView" destination="K6k-oN-bLy" id="jyd-dZ-g1e"/>
             </connections>
-            <point key="canvasLocation" x="154" y="150"/>
+            <point key="canvasLocation" x="154" y="146"/>
         </view>
     </objects>
     <resources>
