--- a/godtools/Views/GTLanguageViewCell.xib
+++ b/godtools/Views/GTLanguageViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -18,8 +19,8 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="downloadIcon" translatesAutoresizingMaskIntoConstraints="NO" id="iwf-Yq-N8B">
-                        <rect key="frame" x="10" y="7" width="30" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud download icon" translatesAutoresizingMaskIntoConstraints="NO" id="iwf-Yq-N8B">
+                        <rect key="frame" x="15" y="10" width="26" height="26"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
@@ -27,10 +28,10 @@
                 <outlet property="downloadIcon" destination="iwf-Yq-N8B" id="irm-13-PdR"/>
                 <outlet property="languageName" destination="KFe-mW-0Q8" id="dZt-fh-iai"/>
             </connections>
-            <point key="canvasLocation" x="250" y="277"/>
+            <point key="canvasLocation" x="250" y="276"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="downloadIcon" width="300" height="300"/>
+        <image name="cloud download icon" width="100" height="79"/>
     </resources>
 </document>
