--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -3,8 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -18,9 +16,10 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="poS-Zh-dm8">
                         <rect key="frame" x="10" y="6" width="35" height="35"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="35" id="IWx-XZ-4gd"/>
                             <constraint firstAttribute="width" secondItem="poS-Zh-dm8" secondAttribute="height" multiplier="1:1" id="SFN-rJ-OYG"/>
                             <constraint firstAttribute="width" secondItem="poS-Zh-dm8" secondAttribute="height" multiplier="1:1" id="fPc-8u-V7o"/>
+                            <constraint firstAttribute="height" constant="35" id="gEp-tX-qOb"/>
+                            <constraint firstAttribute="width" constant="35" id="yRQ-kh-xtO"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -29,38 +28,51 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="live" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-1O-xtc">
+                        <rect key="frame" x="53" y="20" width="66" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.27871890943877553" green="0.27871890943877553" blue="0.27871890943877553" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
                         <rect key="frame" x="53" y="6" width="257" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="live" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-1O-xtc">
-                        <rect key="frame" x="53" y="20" width="66" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="66" id="srf-j8-ydf"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.27871890943877553" green="0.27871890943877553" blue="0.27871890943877553" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="6" id="56a-26-xna"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="-2" id="EgZ-Pm-AmL"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="5" id="F9N-xo-k9E"/>
                     <constraint firstAttribute="trailingMargin" secondItem="UeF-AY-tJc" secondAttribute="trailing" constant="2" id="IBd-Pq-FaR"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leadingMargin" constant="2" id="Iji-FJ-ett"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="-2" id="Ivc-y0-ZRX"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="topMargin" constant="12" id="Qoq-S2-crG"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="bottom" secondItem="poS-Zh-dm8" secondAttribute="bottom" id="bFf-sE-VFg"/>
+                    <constraint firstItem="UeF-AY-tJc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="6" id="MT8-Ve-4tz"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leading" constant="10" id="RKg-aH-Qop"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leading" constant="10" id="SMr-uz-axb"/>
+                    <constraint firstAttribute="trailing" secondItem="Bb5-1O-xtc" secondAttribute="trailing" constant="201" id="T3L-cr-41m"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" id="YRg-FY-aAA"/>
+                    <constraint firstItem="UeF-AY-tJc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" id="dxP-qC-6jr"/>
+                    <constraint firstAttribute="trailing" secondItem="UeF-AY-tJc" secondAttribute="trailing" constant="10" id="i2f-Kz-9wP"/>
                     <constraint firstAttribute="bottomMargin" secondItem="UeF-AY-tJc" secondAttribute="bottom" constant="9" id="iKy-bM-TIl"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="UeF-AY-tJc" secondAttribute="leading" id="mi6-gp-oFj"/>
-                    <constraint firstItem="UeF-AY-tJc" firstAttribute="top" secondItem="poS-Zh-dm8" secondAttribute="top" id="pVS-RI-5Fw"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="poS-Zh-dm8" secondAttribute="bottom" constant="-6" id="pta-u9-j0f"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="6" id="lrg-IW-kqT"/>
+                    <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leadingMargin" constant="2" id="oPS-Cs-9sp"/>
+                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="20" id="qtt-UC-Syq"/>
                     <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" symbolic="YES" id="w5h-Ot-TyK"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="EgZ-Pm-AmL"/>
                         <exclude reference="F9N-xo-k9E"/>
+                        <exclude reference="Iji-FJ-ett"/>
+                        <exclude reference="Ivc-y0-ZRX"/>
+                        <exclude reference="RKg-aH-Qop"/>
+                        <exclude reference="lrg-IW-kqT"/>
+                        <exclude reference="oPS-Cs-9sp"/>
+                        <exclude reference="IBd-Pq-FaR"/>
+                        <exclude reference="iKy-bM-TIl"/>
+                        <exclude reference="w5h-Ot-TyK"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
